Rectifications, et amélioration du constructor de Product et de Bear

--- a/HTML/confirm.html
+++ b/HTML/confirm.html
@@ -15,7 +15,7 @@
     <header>
         <div class="row mb-5">
             <nav class="navbar navbar-light px-5 bg-dark py-4">
-                <a class="navbar-brand text-white">Orinoco</a>
+                <a href="../index.html" class="navbar-brand text-white">Orinoco</a>
                 <a href="cart.html">
                     <button class="btn btn-info my-2 px-4 ">
                         <i class="fas fa-shopping-cart mx-2"></i> Panier
