Visuel des pages panier et confirmation. Erreurs de code HTML réglées

--- a/HTML/confirm.html
+++ b/HTML/confirm.html
@@ -15,7 +15,9 @@
     <header>
         <div class="row mb-5">
             <nav class="navbar navbar-light px-5 bg-dark py-4">
-                <a href="../index.html" class="navbar-brand text-white">Orinoco</a>
+                <a href="../index.html" class="navbar-brand text-white">
+                    <img src="../img/orinoco-img.png" alt="logo de Orinoco">
+                </a>
                 <a href="cart.html">
                     <button class="btn btn-info my-2 px-4 ">
                         <i class="fas fa-shopping-cart mx-2"></i> Panier
@@ -32,7 +34,7 @@
     <p id="p-confirm"></p>
 
 <script type="module" src="../js/confirm.js"></script>
-
+</div>
 </body>
 
 </html>
