--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
     <meta charset="utf-8">
     <title> Panier | Oriours </title>
-    <meta name="description" content="La page panier d'Oriours vous permet d'acheter vos produits en ligne">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,10 +19,8 @@
                 <a class="navbar-brand text-white" href="../index.html">
                     <img src="../img/orinoco-img.png" alt="logo de Orinoco">
                 </a>
-                <a href="cart.html">
-                    <button class="btn btn-info my-2 px-4 ">
+                <a href="cart.html" class="btn btn-info my-2 px-4">
                         <i class="fas fa-shopping-cart mx-2"></i> Panier
-                    </button>
                 </a>
             </nav>
         </div>
