--- a/HTML/confirm.html
+++ b/HTML/confirm.html
@@ -18,10 +18,8 @@
                 <a href="../index.html" class="navbar-brand text-white">
                     <img src="../img/orinoco-img.png" alt="logo de Orinoco">
                 </a>
-                <a href="cart.html">
-                    <button class="btn btn-info my-2 px-4 ">
+                <a href="cart.html" class="btn btn-info my-2 px-4 ">
                         <i class="fas fa-shopping-cart mx-2"></i> Panier
-                    </button>
                 </a>
             </nav>
         </div>
