--- a/HTML/product.html
+++ b/HTML/product.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="utf-8">
     <title>Nos produits Oriours</title>
-    <meta name="description" content="La page produit et description de nos ours en peluche Oriours">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" />
@@ -21,10 +20,8 @@
                     <img src="../img/orinoco-img.png" alt="logo de Orinoco">
                 </a>
 
-                <a href="cart.html">
-                    <button class="btn btn-info my-2 px-4 ">
+                <a href="cart.html" class="btn btn-info my-2 px-4">
                         <i class="fas fa-shopping-cart mx-2"></i> Panier
-                    </button>
                 </a>
 
             </nav>
