--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Découvrez la sélection d'ours en peluche d'Oriours">
     <link rel="icon" href="img/orinoco-img.png"/>
 </head>
 
@@ -20,10 +19,8 @@
             <a class="navbar-brand text-white" href="index.html">
             <img src="img/orinoco-img.png" alt="logo de Orinoco">
             </a>
-            <a href="HTML/cart.html">
-                    <button class="btn btn-info my-2 px-4 ">
+            <a href="HTML/cart.html" class="btn btn-info my-2 px-4">
                         <i class="fas fa-shopping-cart mx-2"></i> Panier
-                    </button>
             </a>
 
         </nav>
